# sql-gpt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example_data/: apple_sales_2024.csv  apple_sales_2024_schema.txt
sql_gpt/: __main__.py  agents.py  constants.py  graph.py  llm.py  logging.py  querier.py  state.py
