[project]
name = "sql-gpt"
version = "0.1.0"
description = "A natural language tool to query your structured data"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langgraph==0.2.64",
    "pydantic==2.10.6"
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.8.0",
    "pytest==8.0.0",
    "pre-commit==3.5.0",
    "ipython==8.3.1"
]
duckdb = [
    "duckdb==1.1.3"
]
openai = [
    "langchain_openai==0.3.1"
]

[tool.black]
line-length = 99
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sql_gpt"]
